# python-sample-app

./: .env-template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: caef621cc070_initial_config.py
app/: app.py  router.py
app/config/: config.py
app/controllers/: articles.py  authors.py
app/hooks/: __init__.py  shutdown.py  startup.py
app/models/: article.py  author.py
app/services/: articles_service.py  authors_service.py  database.py
tests/: conftest.py
tests/endpoints/: test_articles_endpoint.py  test_authors_endpoint.py
tests/services/: test_articles_service.py  test_authors_service.py
